# CaTS_legacy

./: CMakeLists.txt  CaTS.cc  Examples.md  Instructions.md  README.md  ckm.bash  cm.txt  header  readCalorimeterHits.cc  readDRCalorimeterHits.cc  readHits.cc  readMscHits.cc  readPhotonHits.cc  setup_opticks.sh
docs/: lhcb.pptx
gdml/: Bubble.gdml  G4Opticks_50000.gdml  G4Opticks_50000_v107p01.gdml  G4Opticks_50000_v107ref4.gdml  G4Opticks_50000_v107ref4_3.gdml  NoviceExample.gdml  Simple.gdml  crystalcal_pbwo.gdml  novice.gdml  simpleLArTPC.gdml  simpleLArTPCfast.gdml  simpleLArTPCn1fast.gdml  simpleLArTPCn2fast.gdml  wls.gdml
grid/: README.md  env_grid  merge.bash  my_G4.csh  run_G4_grid.bash  run_G4_grid.csh
include/: ActionInitialization.hh  CaTSClasses.hh  CaTS_Version.hh  CalorimeterHit.hh  CalorimeterSD.hh  ColorReader.hh  ConfigurationManager.hh  ConfigurationManagerMessenger.hh  Ctx.hh  DRCalorimeterHit.hh  DRCalorimeterSD.hh  DetectorConstruction.hh  Event.hh  EventAction.hh  InteractionHit.hh  InteractionSD.hh  MscHit.hh  MscSD.hh  OpticksVersion.hh  ParticleChange.hh  PhotonHit.hh  PhotonSD.hh  PhysicsConfigurator.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorActionMessenger.hh  RadiatorSD.hh  RootIO.hh  RunAction.hh  StackingAction.hh  StackingActionMessenger.hh  SteppingAction.hh  TrackInfo.hh  TrackerHit.hh  TrackerSD.hh  TrackingAction.hh  lArTPCHit.hh  lArTPCSD.hh
macros/: msc.mac  muon_G4.mac  muon_IO.mac  muon_IO_noPhotons.mac  muon_IO_noopticks.mac  muon_noIO.mac  muon_noIO_noopticks.mac  pip_IO_Calo.mac  pip_IO_DR.mac  time.mac  timeGPS.mac  time_G4.mac  timeout.mac
nbproject/: configurations.xml  licenseheader.txt  project.properties  project.xml
nbproject/private/: Default.properties  configurations.xml
scripts/: FitReemissionSpect.csv  LAr.C  LArProperties.pptx  bench.C  plote.C  scan.sh  wls.C
src/: ActionInitialization.cc  CalorimeterHit.cc  CalorimeterSD.cc  ColorReader.cc  ConfigurationManager.cc  ConfigurationManagerMessenger.cc  Ctx.cc  DRCalorimeterHit.cc  DRCalorimeterSD.cc  DetectorConstruction.cc  Event.cc  EventAction.cc  InteractionHit.cc  InteractionSD.cc  MscHit.cc  MscSD.cc  OpNoviceDetectorConstruction.cc  PhotonHit.cc  PhotonSD.cc  PhysicsConfigurator.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorActionMessenger.cc  RadiatorSD.cc  RootIO.cc  RunAction.cc  StackingAction.cc  StackingActionMessenger.cc  SteppingAction.cc  TrackerHit.cc  TrackerSD.cc  TrackingAction.cc  lArTPCHit.cc  lArTPCSD.cc
